--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch server.js"
+    "dev": "node --watch --env-file=.env server.js"
   },
-  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
