--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "node --watch --env-file=.env server.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
